Implemented Serialization() options
- Implemented Serialize() extension method
- Implemented ToString() for all the built-in types over serialization. ToString() now reliably returns the json fragment that would be produced by serialization. [Note that some still use their own internal optimised versions rather than going via the Serialize() extension method]
- Explicitly implemented `UriTemplate` conversion for values into uri template form. It does not rely on ToString() any more.
- Fixed a name collision between spec steps.

--- a/Solutions/Corvus.Json.Walker.JsonSchema/Corvus.Json.JsonSchema.TypeBuilder/Draft202012/SchemaEntity202012.tt
+++ b/Solutions/Corvus.Json.Walker.JsonSchema/Corvus.Json.JsonSchema.TypeBuilder/Draft202012/SchemaEntity202012.tt
@@ -2388,6 +2388,12 @@ namespace <#= Namespace #>
     #>
 
         /// <inheritdoc/>
+        public override string ToString()
+        {
+            return this.Serialize();
+        }
+
+        /// <inheritdoc/>
         public override bool Equals(object? obj)
         {
             if (obj is IJsonValue jv)
