--- a/Solutions/Corvus.Json.Walker.JsonSchema/Corvus.Json.JsonSchema.TypeBuilder/Draft201909/SchemaEntity201909.tt
+++ b/Solutions/Corvus.Json.Walker.JsonSchema/Corvus.Json.JsonSchema.TypeBuilder/Draft201909/SchemaEntity201909.tt
@@ -251,6 +251,62 @@ namespace <#= Namespace #>
     }
     #>
 
+    <#
+    if (HasConst)
+    {
+    #>
+        /// <summary>
+        /// Initializes a new instance of the <see cref="<#= TypeDeclaration.DotnetTypeName #>"/> struct.
+        /// </summary>
+        public <#= TypeDeclaration.DotnetTypeName #>()
+        {
+            this.jsonElementBacking = __CorvusConstValue.jsonElementBacking;
+    <#
+    if(IsImplicitObject)
+    {
+    #>
+            this.objectBacking = __CorvusConstValue.objectBacking;
+    <#
+    }
+    #>
+    <#
+    if(IsImplicitArray)
+    {
+    #>
+            this.arrayBacking = __CorvusConstValue.arrayBacking;
+    <#
+    }
+    #>
+    <#
+    if(IsImplicitNumber)
+    {
+    #>
+            this.numberBacking = __CorvusConstValue.numberBacking;
+    <#
+    }
+    #>
+    <#
+    if(IsImplicitString)
+    {
+    #>
+            this.stringBacking = __CorvusConstValue.stringBacking;
+    <#
+    }
+    #>
+    <#
+    if(IsImplicitBoolean)
+    {
+    #>
+            this.booleanBacking = __CorvusConstValue.booleanBacking;
+    <#
+    }
+    #>
+        }
+
+    <#
+    }
+    #>
+
         /// <summary>
         /// Initializes a new instance of the <see cref="<#= TypeDeclaration.DotnetTypeName #>"/> struct.
         /// </summary>
@@ -2308,17 +2364,20 @@ namespace <#= Namespace #>
         bool isFirstCreateParameter = true;
         foreach(var property in RequiredAllOfAndRefProperties)
         {
-            if (isFirstCreateParameter)
-            {
-                isFirstCreateParameter = false;
-            }
-            else
-            {
+            if (!IsConst(property.Type))
+            {           
+                if (isFirstCreateParameter)
+                {
+                    isFirstCreateParameter = false;
+                }
+                else
+                {
         #>, <#
-            }
+                }
         #>
            <#= property.Type.FullyQualifiedDotnetTypeName #> <#= property.DotnetParameterName #>
         <#
+            }
         }
         #>
         <#
@@ -2344,9 +2403,18 @@ namespace <#= Namespace #>
         <#
         foreach(var property in RequiredAllOfAndRefProperties)
         {
+            if (IsConst(property.Type))
+            {
+        #>
+            builder.Add(<#= property.DotnetPropertyName#>JsonPropertyName, new <#= property.Type.FullyQualifiedDotnetTypeName #>());
+        <#
+            }
+            else
+            {
         #>
             builder.Add(<#= property.DotnetPropertyName#>JsonPropertyName, <#= property.DotnetParameterName #>);
         <#
+            }
         }
         #>
         <#
@@ -2356,8 +2424,17 @@ namespace <#= Namespace #>
             if (<#= property.DotnetParameterName #> is <#= property.Type.FullyQualifiedDotnetTypeName #> <#= property.DotnetParameterName #>__)
             {
                 builder.Add(<#= property.DotnetPropertyName#>JsonPropertyName, <#= property.DotnetParameterName #>__);
+            }            
+        <#
+            if (IsConst(property.Type))
+            {
+        #>
+            else
+            {
+                builder.Add(<#= property.DotnetPropertyName#>JsonPropertyName, new <#= property.Type.FullyQualifiedDotnetTypeName #>());
             }
         <#
+            }
         }
         #>
             return builder.ToImmutable();
@@ -2366,6 +2443,10 @@ namespace <#= Namespace #>
         <#
         foreach(var property in Properties)
         {
+            if (IsConst(property.Type))
+            {
+                continue;
+            }
         #>
 
         /// <summary>
