--- a/Solutions/Corvus.Json.Patch.SpecGenerator/Benchmark.tt
+++ b/Solutions/Corvus.Json.Patch.SpecGenerator/Benchmark.tt
@@ -60,8 +60,8 @@ namespace Benchmarks
             }
             catch(Exception)
             {
-                // Push this out into a long wait for failure.
-                Task.Delay(1000).Wait();
+                // Swallow failures until we can diagnose the issue with running inside BMDN
+                // https://github.com/dotnet/BenchmarkDotNet/issues/2032
             }
         }
     }
