Fixed defect: Array validation code generator was using .Length instead of .GetArrayLength()

--- a/Solutions/Corvus.Json.CodeGeneration.201909/Corvus.Json.CodeGeneration.Draft201909/Templates/CodeGenerator.Validate.Array.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.201909/Corvus.Json.CodeGeneration.Draft201909/Templates/CodeGenerator.Validate.Array.tt
@@ -44,7 +44,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 <#  }
     else
     { #>
-        int arrayLength = this.Length;
+        int arrayLength = this.GetArrayLength();
 <#  }
     if (HasContains)
     { #>
