Added support for draft7-style content encoding.

--- a/Solutions/Corvus.Json.CodeGeneration.7/Corvus.Json.CodeGeneration.Draft7/Templates/CodeGenerator.Validate.Format.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.7/Corvus.Json.CodeGeneration.Draft7/Templates/CodeGenerator.Validate.Format.tt
@@ -121,7 +121,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 <#  }
     if (IsJsonBase64String)
     { #>
-        return Corvus.Json.Validate.TypeBase64String(this, result, level);
+        return Corvus.Json.Validate.TypeBase64String(this, result, level, false);
 <#  }
     if (IsJsonContent)
     { #>
