Self bootstrapping Draft6

--- a/Solutions/Corvus.Json.CodeGeneration.6/Corvus.Json.CodeGeneration.Draft6/Templates/CodeGeneratorPartial.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.6/Corvus.Json.CodeGeneration.Draft6/Templates/CodeGeneratorPartial.tt
@@ -444,7 +444,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema.Format.IsNotUndefined() || this.TypeDeclaration.Schema.ContentEncoding.IsNotUndefined();
+            return this.TypeDeclaration.Schema.Format.IsNotUndefined() || this.TypeDeclaration.Schema.GetContentEncoding().IsNotUndefined();
         }
     }
 
@@ -455,7 +455,7 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            return this.TypeDeclaration.Schema.ContentMediaType.IsNotUndefined() || this.TypeDeclaration.Schema.ContentEncoding.IsNotUndefined();
+            return this.TypeDeclaration.Schema.GetContentMediaType().IsNotUndefined() || this.TypeDeclaration.Schema.GetContentEncoding().IsNotUndefined();
         }
     }
 
@@ -1330,9 +1330,9 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.TypeDeclaration.Schema.ContentMediaType.IsNotUndefined() && this.TypeDeclaration.Schema.ContentEncoding.IsNotUndefined())
+            if (this.TypeDeclaration.Schema.GetContentMediaType().IsNotUndefined() && this.TypeDeclaration.Schema.GetContentEncoding().IsNotUndefined())
             {
-                return this.TypeDeclaration.Schema.ContentMediaType == "application/json" && this.TypeDeclaration.Schema.ContentEncoding == "base64";
+                return this.TypeDeclaration.Schema.GetContentMediaType() == "application/json" && this.TypeDeclaration.Schema.GetContentEncoding() == "base64";
             }
 
             return false;
@@ -1346,9 +1346,9 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.TypeDeclaration.Schema.ContentMediaType.IsUndefined() && this.TypeDeclaration.Schema.ContentEncoding.IsNotUndefined())
+            if (this.TypeDeclaration.Schema.GetContentMediaType().IsUndefined() && this.TypeDeclaration.Schema.GetContentEncoding().IsNotUndefined())
             {
-                return this.TypeDeclaration.Schema.ContentEncoding == "base64";
+                return this.TypeDeclaration.Schema.GetContentEncoding() == "base64";
             }
 
             return false;
@@ -1362,9 +1362,9 @@ public partial class <#= PartialClassName #>
     {
         get
         {
-            if (this.TypeDeclaration.Schema.ContentMediaType.IsNotUndefined() && this.TypeDeclaration.Schema.ContentEncoding.IsUndefined())
+            if (this.TypeDeclaration.Schema.GetContentMediaType().IsNotUndefined() && this.TypeDeclaration.Schema.GetContentEncoding().IsUndefined())
             {
-                return this.TypeDeclaration.Schema.ContentMediaType == "application/json";
+                return this.TypeDeclaration.Schema.GetContentMediaType() == "application/json";
             }
 
             return false;
