--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.IfThenElse.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.IfThenElse.tt
@@ -68,7 +68,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     /// Gets a value indicating whether this matches an If/Then case, return the value as the type defined for the then case.
     /// </summary>
     /// <param name="result">This value cast to the 'then' type, when the 'if' schema matches, otherwise an Undefined instance of the 'then' type.</param>
-    /// <returns><c>True if the 'if' case matched, and the 'else' instance was provided.</returns>
+    /// <returns><c>True</c> if the 'if' case matched, and the 'else' instance was provided.</returns>
     public bool TryMatch<#= IfDotnetTypeName #>(out <#= ThenFullyQualifiedDotnetTypeName #> result)
     {
         if (this.As<<#= IfFullyQualifiedDotnetTypeName#>>().IsValid())
@@ -88,7 +88,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
     /// Gets a value indicating whether this matches an If/Then/Else case, providing the 'else' type when the 'if' schema does not match.
     /// </summary>
     /// <param name="result">This value cast to the 'else' type, when the 'if' schema does not match, otherwise an Undefined instance of the else type.</param>
-    /// <returns><c>True if the if case did not match, and the else instance was provided.</returns>
+    /// <returns><c>True</c> if the if case did not match, and the else instance was provided.</returns>
     public bool TryNotMatched<#= IfDotnetTypeName #>(out <#= ElseFullyQualifiedDotnetTypeName #> result)
     {
         if (!this.As<<#= IfFullyQualifiedDotnetTypeName#>>().IsValid())
