Added a single-items-type FromItems(IEnumerable<>) member.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
@@ -494,6 +494,22 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
 
         return new(builder.ToImmutable());
     }
+
+    /// <summary>
+    /// Initializes a new instance of the <see cref="<#= TypeDeclaration.DotnetTypeName #>"/> struct.
+    /// </summary>
+    /// <param name="value">The value from which to construct the instance.</param>
+    /// <returns>A JsonAny instantiated from the given items.</returns>
+    public static <#= TypeDeclaration.DotnetTypeName #> FromItems(IEnumerable<<#= SingleItemsDotnetTypeName #>> value)
+    {
+        ImmutableList<JsonAny>.Builder builder = ImmutableList.CreateBuilder<JsonAny>();
+        foreach (<#= SingleItemsDotnetTypeName #> item in value)
+        {
+            builder.Add(item.AsAny);
+        }
+
+        return new(builder.ToImmutable());
+    }
 <#  }#>
 
     /// <inheritdoc/>
