More updates to the Array API. We'll get something nice in the end!

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Array.tt
@@ -36,7 +36,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
     /// <summary>
     /// Gets an empty array.
     /// </summary>
-    public static readonly <#= TypeDeclaration.DotnetTypeName #> EmptyArray = FromItems(ImmutableList<JsonAny>.Empty);
+    public static readonly <#= TypeDeclaration.DotnetTypeName #> EmptyArray = From(ImmutableList<JsonAny>.Empty);
 
     /// <summary>
     /// Initializes a new instance of the <see cref="<#= TypeDeclaration.DotnetTypeName #>"/> struct.
@@ -166,7 +166,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
     /// <param name="items">The list of items from which to construct the array.</param>
     /// <returns>An instance of the array constructed from the list.</returns>
     [MethodImpl(MethodImplOptions.AggressiveInlining)]
-    public static <#= TypeDeclaration.DotnetTypeName #> FromItems(ImmutableList<JsonAny> items)
+    public static <#= TypeDeclaration.DotnetTypeName #> From(ImmutableList<JsonAny> items)
     {
         return new(items);
     }
@@ -265,7 +265,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
     /// This will serialize the items to create the underlying JsonArray. Note the
     /// other overloads which avoid this serialization step.
     /// </remarks>
-    public static <#= TypeDeclaration.DotnetTypeName #> FromRange<T>(IEnumerable<T> items)
+    public static <#= TypeDeclaration.DotnetTypeName #> From<T>(IEnumerable<T> items)
     {
         ImmutableList<JsonAny>.Builder builder = ImmutableList.CreateBuilder<JsonAny>();
         foreach (T item in items)
@@ -280,12 +280,42 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
         return new <#= TypeDeclaration.DotnetTypeName #>(builder.ToImmutable());
     }
 
+    /// <summary>
+    /// Create an array from the given items.
+    /// </summary>
+    /// <param name = "items">The items from which to create the array.</param>
+    /// <returns>The new array created from the items.</returns>
+    /// <remarks>
+    /// This will serialize the items to create the underlying JsonArray. Note the
+    /// other overloads which avoid this serialization step.
+    /// </remarks>
     public static <#= TypeDeclaration.DotnetTypeName #> FromRange(IEnumerable<JsonAny> items)
     {
         ImmutableList<JsonAny>.Builder builder = ImmutableList.CreateBuilder<JsonAny>();
         foreach (JsonAny item in items)
         {
             builder.Add(item);
+        }
+
+        return new <#= TypeDeclaration.DotnetTypeName #>(builder.ToImmutable());
+    }
+
+    /// <summary>
+    /// Create an array from the given items.
+    /// </summary>
+    /// <param name = "items">The items from which to create the array.</param>
+    /// <returns>The new array created from the items.</returns>
+    /// <remarks>
+    /// This will serialize the items to create the underlying JsonArray. Note the
+    /// other overloads which avoid this serialization step.
+    /// </remarks>
+    public static <#= TypeDeclaration.DotnetTypeName #> FromRange<T>(IEnumerable<T> items)
+        where T : struct, IJsonValue<T>
+    {
+        ImmutableList<JsonAny>.Builder builder = ImmutableList.CreateBuilder<JsonAny>();
+        foreach (T item in items)
+        {
+            builder.Add(item.AsAny);
         }
 
         return new <#= TypeDeclaration.DotnetTypeName #>(builder.ToImmutable());
@@ -503,6 +533,72 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonArra
         }
 
         return new(builder.ToImmutable());
+    }
+
+    /// <summary>
+    /// Create an array from the given items.
+    /// </summary>
+    /// <typeparam name="T">The type of the <paramref name="items"/> from which to create the array.</typeparam>
+    /// <param name="items">The items from which to create the array.</param>
+    /// <returns>The new array created from the items.</returns>
+    /// <remarks>
+    /// This will serialize the items to create the underlying JsonArray. Note the
+    /// other overloads which avoid this serialization step.
+    /// </remarks>
+    public static <#= TypeDeclaration.DotnetTypeName #> From<T>(IEnumerable<T> items)
+    {
+        ImmutableList<JsonAny>.Builder builder = ImmutableList.CreateBuilder<JsonAny>();
+        foreach (T item in items)
+        {
+            var abw = new ArrayBufferWriter<byte>();
+            using var writer = new Utf8JsonWriter(abw);
+            JsonSerializer.Serialize(writer, item);
+            writer.Flush();
+            builder.Add(JsonAny.Parse(abw.WrittenMemory));
+        }
+
+        return new <#= TypeDeclaration.DotnetTypeName #>(builder.ToImmutable());
+    }
+
+    /// <summary>
+    /// Create an array from the given items.
+    /// </summary>
+    /// <param name = "items">The items from which to create the array.</param>
+    /// <returns>The new array created from the items.</returns>
+    /// <remarks>
+    /// This will serialize the items to create the underlying JsonArray. Note the
+    /// other overloads which avoid this serialization step.
+    /// </remarks>
+    public static <#= TypeDeclaration.DotnetTypeName #> FromRange(IEnumerable<JsonAny> items)
+    {
+        ImmutableList<JsonAny>.Builder builder = ImmutableList.CreateBuilder<JsonAny>();
+        foreach (JsonAny item in items)
+        {
+            builder.Add(item);
+        }
+
+        return new <#= TypeDeclaration.DotnetTypeName #>(builder.ToImmutable());
+    }
+
+    /// <summary>
+    /// Create an array from the given items.
+    /// </summary>
+    /// <param name = "items">The items from which to create the array.</param>
+    /// <returns>The new array created from the items.</returns>
+    /// <remarks>
+    /// This will serialize the items to create the underlying JsonArray. Note the
+    /// other overloads which avoid this serialization step.
+    /// </remarks>
+    public static <#= TypeDeclaration.DotnetTypeName #> FromRange<T>(IEnumerable<T> items)
+        where T : struct, IJsonValue<T>
+    {
+        ImmutableList<JsonAny>.Builder builder = ImmutableList.CreateBuilder<JsonAny>();
+        foreach (T item in items)
+        {
+            builder.Add(item.AsAny);
+        }
+
+        return new <#= TypeDeclaration.DotnetTypeName #>(builder.ToImmutable());
     }
 <#  }#>
 
