--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/CustomAny.Array.tt
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/CustomAny.Array.tt
@@ -21,7 +21,7 @@ public readonly partial struct <#= TypeName #> : IJsonArray<<#= TypeName #>>
     /// <summary>
     /// Gets an empty array.
     /// </summary>
-    public static readonly <#= TypeName #> EmptyArray = FromItems(ImmutableList<JsonAny>.Empty);
+    public static readonly <#= TypeName #> EmptyArray = From(ImmutableList<JsonAny>.Empty);
 
     /// <summary>
     /// Initializes a new instance of the <see cref="<#= TypeName #>"/> struct.
@@ -103,7 +103,7 @@ public readonly partial struct <#= TypeName #> : IJsonArray<<#= TypeName #>>
     /// <param name="items">The list of items from which to construct the array.</param>
     /// <returns>An instance of the array constructed from the list.</returns>
     [MethodImpl(MethodImplOptions.AggressiveInlining)]
-    public static <#= TypeName #> FromItems(ImmutableList<JsonAny> items)
+    public static <#= TypeName #> From(ImmutableList<JsonAny> items)
     {
         return new(items);
     }
@@ -170,7 +170,7 @@ public readonly partial struct <#= TypeName #> : IJsonArray<<#= TypeName #>>
     /// This will serialize the items to create the underlying JsonArray. Note the
     /// other overloads which avoid this serialization step.
     /// </remarks>
-    public static <#= TypeName #> FromRange<T>(IEnumerable<T> items)
+    public static <#= TypeName #> From<T>(IEnumerable<T> items)
     {
         ImmutableList<JsonAny>.Builder builder = ImmutableList.CreateBuilder<JsonAny>();
         foreach (T item in items)
@@ -188,11 +188,27 @@ public readonly partial struct <#= TypeName #> : IJsonArray<<#= TypeName #>>
     /// <summary>
     /// Create an array from the given items.
     /// </summary>
-    /// <typeparam name="T">The type of the items in the array.</typeparam>
+    /// <typeparam name="TItem">The type of the items in the array.</typeparam>
     /// <param name="items">The items from which to create the array.</param>
     /// <returns>The new array created from the items.</returns>
-    public static JsonArray FromItems<T>(IEnumerable<JsonAny> items)
-        where T : struct, IJsonValue
+    public static <#= TypeName #> FromRange<TItem>(IEnumerable<TItem> items)
+        where TItem : struct, IJsonValue<TItem>
+    {
+        ImmutableList<JsonAny>.Builder builder = ImmutableList.CreateBuilder<JsonAny>();
+        foreach (TItem item in items)
+        {
+            builder.Add(item.AsAny);
+        }
+
+        return new <#= TypeName #>(builder.ToImmutable());
+    }
+
+    /// <summary>
+    /// Create an array from the given items.
+    /// </summary>
+    /// <param name="items">The items from which to create the array.</param>
+    /// <returns>The new array created from the items.</returns>
+    public static <#= TypeName #> FromRange(IEnumerable<JsonAny> items)
     {
         ImmutableList<JsonAny>.Builder builder = ImmutableList.CreateBuilder<JsonAny>();
         foreach (JsonAny item in items)
