--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Validate.Object.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Validate.Object.tt
@@ -19,6 +19,7 @@
 #nullable enable
 
 using System.Collections.Immutable;
+using System.Text;
 using System.Text.Json;
 using System.Text.RegularExpressions;
 using Corvus.Json;
@@ -53,38 +54,68 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 <#      }
     } #>
 
-        foreach (JsonObjectProperty property in this.EnumerateObject())
-        {
-            JsonPropertyName propertyName = property.Name;
 <#  if (HasDependentRequired)
     { #>
-
-            if (__CorvusDependentRequired.TryGetValue(propertyName, out ImmutableArray<JsonPropertyName> dependencies))
+        foreach(var dependentRequired in __CorvusDependentRequired)
+        {
+            if (this.HasJsonElementBacking)
             {
-                foreach (JsonPropertyName dependency in dependencies)
+                if (this.HasProperty(dependentRequired.Utf8Name.Span))
                 {
-                    if (!this.HasProperty(dependency)<#= HasDefaults ? " && !this.HasDefault(dependency))" : ")" #>
+                    foreach (ReadOnlyMemory<byte> dependency in dependentRequired.Utf8Dependency)
                     {
-                        if (level >= ValidationLevel.Detailed)
+                        ReadOnlySpan<byte> dSpan = dependency.Span;
+                        if (!this.HasProperty(dSpan)<#= HasDefaults ? " && !this.HasDefault(dSpan))" : ")" #>
                         {
-                            result = result.WithResult(isValid: false, $"6.5.4. dependentRequired - dependent property \"{dependency}\" not found.");
-                        }
-                        else if (level >= ValidationLevel.Basic)
-                        {
-                            result = result.WithResult(isValid: false, "6.5.4. dependentRequired - dependent property not found.");
-                        }
-                        else
-                        {
-                            return result.WithResult(isValid: false);
+                            if (level >= ValidationLevel.Detailed)
+                            {
+                                result = result.WithResult(isValid: false, $"6.5.4. dependentRequired - dependent property \"{Encoding.UTF8.GetString(dSpan)}\" not found.");
+                            }
+                            else if (level >= ValidationLevel.Basic)
+                            {
+                                result = result.WithResult(isValid: false, "6.5.4. dependentRequired - dependent property not found.");
+                            }
+                            else
+                            {
+                                return result.WithResult(isValid: false);
+                            }
                         }
                     }
                 }
             }
-<#  }
-    if (HasLocalProperties || HasRequired)
+            else
+            {
+                if (this.HasProperty(dependentRequired.Name))
+                {
+                    foreach (string dependency in dependentRequired.Dependency)
+                    {
+                        if (!this.HasProperty(dependency)<#= HasDefaults ? " && !this.HasDefault(dependency))" : ")" #>
+                        {
+                            if (level >= ValidationLevel.Detailed)
+                            {
+                                result = result.WithResult(isValid: false, $"6.5.4. dependentRequired - dependent property \"{dependency}\" not found.");
+                            }
+                            else if (level >= ValidationLevel.Basic)
+                            {
+                                result = result.WithResult(isValid: false, "6.5.4. dependentRequired - dependent property not found.");
+                            }
+                            else
+                            {
+                                return result.WithResult(isValid: false);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+<#  } #>
+
+        foreach (JsonObjectProperty property in this.EnumerateObject())
+        {
+<#  if (HasLocalProperties || HasRequired)
     { #>
 
-            if (__CorvusLocalProperties.TryGetValue(propertyName, out PropertyValidator<<#= TypeDeclaration.DotnetTypeName #>>? propertyValidator))
+            if (__TryGetCorvusLocalPropertiesValidator(property, this.HasJsonElementBacking, out PropertyValidator<<#= TypeDeclaration.DotnetTypeName #>>? propertyValidator))
             {
                 result = result.WithLocalProperty(propertyCount);
                 var propertyResult = propertyValidator(this, result.CreateChildContext(), level);
@@ -99,7 +130,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 <#          int requiredIndex = 0 ;
             foreach (var property in RequiredProperties)
             { #>
-                <#= requiredIndex != 0 ? "else " : "" #>if (<#= property.DotnetPropertyName #>JsonPropertyName.Equals(propertyName))
+                <#= requiredIndex != 0 ? "else " : "" #>if ((this.HasJsonElementBacking && property.NameEquals(<#= property.DotnetPropertyName #>Utf8JsonPropertyName.Span)) || (!this.HasJsonElementBacking && property.NameEquals(<#= property.DotnetPropertyName #>JsonPropertyName)))
                 {
                     found<#= property.DotnetPropertyName #> = true;
                 }
@@ -110,7 +141,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
 <#  }
     if (HasDependentSchemas)
     { #>
-            if (__CorvusDependentSchema.TryGetValue(propertyName, out PropertyValidator<<#= TypeDeclaration.DotnetTypeName #>>? dependentSchemaValidator))
+            if (__TryGetCorvusDependentSchemaValidator(property, this.HasJsonElementBacking, out PropertyValidator<<#= TypeDeclaration.DotnetTypeName #>>? dependentSchemaValidator))
             {
                 result = result.WithLocalProperty(propertyCount);
                 result = dependentSchemaValidator(this, result, level);
@@ -121,11 +152,12 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
             }
 <#  }
     if (HasPropertyNames || HasPatternProperties)
-    {
-        if (HasPropertyNames)
+    { #>
+            string propertyName = property.Name;
+<#      if (HasPropertyNames)
         { #>
 
-            result = new <#= PropertyNamesDotnetTypeName #>((string)propertyName).Validate(result, level);
+            result = new <#= PropertyNamesDotnetTypeName #>(propertyName).Validate(result, level);
             if (level == ValidationLevel.Flag && !result.IsValid)
             {
                 return result;
@@ -183,7 +215,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #>
             {
                 if (level >= ValidationLevel.Detailed)
                 {
-                    result = result.WithResult(isValid: false, $"9.3.2.3. additionalProperties - additional property \"{propertyName}\" is not permitted.");
+                    result = result.WithResult(isValid: false, $"9.3.2.3. additionalProperties - additional property \"{property.Name}\" is not permitted.");
                 }
                 else if (level >= ValidationLevel.Basic)
                 {
